[package]
name = "runlike"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4.5.17", default-features = false, features = [
    "std",
    "derive",
    "help",
] }
itertools = { version = "0.13", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
